[tool.poetry]
name = "ugc"
version = "0.0.1"
description = "UGC api sericce"
authors = ["yandex students"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
pydantic = "^1.8.0"
python-dotenv = "^1.0.0"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
orjson = "^3.5.0"
pytest = "^7.3.1"
aiohttp = "^3.8.3"
pytest-asyncio = "^0.20.3"
backoff = "^2.2.1"
httpx = "^0.24.1"